# achronyme-core

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .npmignore  BUILD-WASM.md  CHANGELOG.md  CMakeLists.txt  COMPILE-NOW.txt  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_PROGRAMMING_REQUIREMENTS.md  INVESTIGACION-FALLOS-RESUMEN.md  KNOWN-ISSUES.md  LEGACY-TESTS-FIX-SUMMARY.md  NPM_PREPARATION_SUMMARY.md  OPTIMIZATION_FUNCTIONS.md  ORGANIZATION-SUMMARY.md  PHASE2_PLAN.md  PHASE2_SUCCESS.md  PHASE3_PLAN.md  PHASE3_SUCCESS.md  PHASE4_PLAN.md  PROBLEMA-REFCELL-BORROW.md  PROJECT_SUMMARY.md  PUBLICACION-V0.3.0-CHECKLIST.md  QUICK-START.md  README.md  REFACTOR.md  RELEASE-CHECKLIST-BETA-8.md  RESUMEN-SESION.md  SDK-IMPLEMENTATION.md  SDK-REFACTOR-PLAN.md  SDK-V2-PROGRESS.md  SESSION-SUMMARY.md  SOLUCION-VECTORIZACION-CPP.md  TEST-FAILURES-ANALYSIS.md  TEST-SUITE-SUMMARY.md  build-and-test.bat  build-and-test.sh  (+30 more)
.claude/: settings.local.json
crates/achronyme-cli/: Cargo.toml  README.md
crates/achronyme-cli/src/: README.md  highlighter.rs  lib.rs  main.rs  repl_helper.rs
crates/achronyme-env/: Cargo.toml  README.md
crates/achronyme-env/src/: README.md  checksum.rs  errors.rs  format.rs  lib.rs  metadata.rs  persist.rs  serialize.rs
crates/achronyme-eval/: Cargo.toml  README.md  test.ach
crates/achronyme-eval/src/: README.md  constants.rs  environment.rs  evaluator.rs  functions.rs  lib.rs  tco.rs  type_checker.rs
crates/achronyme-eval/src/evaluator/: dispatcher.rs  lambda_eval.rs  mod.rs  modules.rs  state.rs
crates/achronyme-eval/src/function_modules/: array.rs  common.rs  complex.rs  dsp.rs  exponential.rs  graphs.rs  io.rs  matrix.rs  mod.rs  records.rs  rounding.rs  stats.rs  strings.rs  trig.rs  utils.rs  vector.rs
crates/achronyme-eval/src/function_modules/array/: core.rs  mod.rs  search.rs  tests.rs  transform.rs
crates/achronyme-eval/src/function_modules/graphs/: connectivity.rs  cycles.rs  helpers.rs  mod.rs  mst.rs  network.rs  pert.rs  shortest_path.rs  topological.rs  traversal.rs
crates/achronyme-eval/src/function_modules/graphs/pert/: cpm.rs  critical_path.rs  mod.rs  probabilistic.rs  project.rs  state_detection.rs  statistics.rs  validation.rs
crates/achronyme-eval/src/handlers/: README.md  assignment.rs  binary_ops.rs  control_flow.rs  debug.rs  function_call.rs  functions.rs  hof.rs  indexing.rs  literals.rs  mod.rs  numerical.rs  optimization.rs  pattern_matching.rs  unary_ops.rs  variables.rs
crates/achronyme-eval/src/handlers/binary_ops/: comparison.rs  logical.rs  mod.rs  utils.rs
crates/achronyme-eval/src/handlers/binary_ops/arithmetic/: add.rs  divide.rs  mod.rs  modulo.rs  multiply.rs  power.rs  subtract.rs
crates/achronyme-eval/src/handlers/indexing/: evaluation.rs  mod.rs  string.rs  types.rs  utils.rs  vector.rs
crates/achronyme-eval/src/handlers/indexing/tensor/: complex.rs  mod.rs  real.rs
crates/achronyme-eval/src/modules/: builtin_registry.rs  mod.rs
crates/achronyme-eval/src/tco/: mod.rs  tests.rs
crates/achronyme-eval/src/type_checker/: checker.rs  display.rs  error.rs  inference.rs  mod.rs  tests.rs  validators.rs
crates/achronyme-eval/tests/: test_broadcasting.rs  test_builtin_array.rs  test_builtin_array_tier2.rs  test_common.rs  test_complex_extensions.rs  test_complexvector_hof.rs  test_dsp_functions.rs  test_env_persistence.rs  test_evaluator.rs  test_function_registry.rs  test_generators.rs  test_graph_edges.rs  test_graph_mst.rs  test_graph_network_functions.rs  test_graph_properties.rs  test_graph_shortest_path.rs  test_graph_topological_sort.rs  test_graph_traversal.rs  test_graphs.rs  test_if_expressions.rs  test_io_functions.rs  test_module_imports.rs  test_mutability_integration.rs  test_pattern_matching.rs  test_records.rs  test_recursion_and_self.rs  test_return_statement.rs  test_shadowing.rs  test_spread_operator.rs  test_string_broadcasting.rs  test_string_broadcasting_examples.rs  test_string_functions.rs  test_strings.rs  test_tco_deep_recursion.rs  test_type_promotion.rs  test_user_modules.rs  test_utility_functions.rs  test_while_loop.rs  type_checking_integration.rs
crates/achronyme-eval/tests/test_evaluator/: basic.rs  conditionals.rs  helpers.rs  hof.rs  lambda.rs  parser.rs  piecewise.rs
crates/achronyme-eval/tests/test_modules/: constants.soc  math_utils.soc  stats_utils.soc
crates/achronyme-eval/tests/type_checking_integration/: assignment.rs  basic.rs  edge.rs  function_params.rs  function_types.rs  null.rs  type_alias.rs
crates/achronyme-linalg/: Cargo.toml  README.md
crates/achronyme-linalg/src/: README.md  decompositions.rs  eigenvalues.rs  lib.rs  solvers.rs
crates/achronyme-linalg/src/decompositions/: README.md
crates/achronyme-linalg/src/eigenvalues/: README.md
crates/achronyme-linalg/src/solvers/: README.md
crates/achronyme-wasm/: Cargo.toml
crates/achronyme-wasm/src/: lib.rs  state.rs
crates/achronyme-wasm/src/api/: core.rs  dsp.rs  linalg.rs  math.rs  memory.rs  mod.rs  numerical.rs  solver.rs  stats.rs  utils.rs
dist-rust/: achronyme-core.mjs  achronyme-core_bg.js  achronyme-wrapper.mjs
dist-rust-web/: achronyme_wasm.d.ts  achronyme_wasm.js  achronyme_wasm_bg.wasm.d.ts
docs/: ANALISIS_PROFUNDO_RECURSION_Y_MUTABILIDAD.md  ARCHITECTURE.md  BUILD-GUIDE.md  COMPILE-AND-TEST.md  FAST-PATH-DIAGRAMS.md  HANDLES-SYSTEM.md  (+39 more)
wasm/: CMakeLists.txt  README.md
wasm/src/bindings/: fast_ops.cpp  fast_ops.hpp  linalg_bindings.cpp  linalg_bindings.hpp  main.cpp  main_sessions.cpp  main_stateful.cpp  main_stateless_backup.cpp
wasm/src/core/: complex.cpp  complex.hpp  constants.cpp  constants.hpp  function.cpp  function.hpp  functions.cpp  functions.hpp  functions_dsp.cpp  functions_hof.cpp  handle_manager.cpp  handle_manager.hpp  matrix.cpp  matrix.hpp  value.cpp  value.hpp  vector.cpp  vector.hpp
wasm/src/linalg/: decompositions.cpp  decompositions.hpp  eigensolvers.cpp  eigensolvers.hpp
wasm/src/parser/: ast.hpp  environment.hpp  evaluator.cpp  evaluator.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
wasm/tests/: CMakeLists.txt  test_basic.cpp
(+375 files in other folders)
