[workspace]
resolver = "2"
members = [
    "crates/achronyme-parser",
    "crates/achronyme-eval",
    "crates/achronyme-types",
    "crates/achronyme-linalg",
    "crates/achronyme-dsp",
    "crates/achronyme-numerical",
    "crates/achronyme-wasm",
    "crates/achronyme-cli",
]

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Linear algebra
ndarray = { version = "0.15", features = ["blas", "serde"] }
ndarray-linalg = "0.16"
blas-src = { version = "0.8", features = ["openblas"] }
lapack-src = { version = "0.8", features = ["openblas"] }

# DSP
rustfft = "6.0"
num-complex = "0.4"

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Testing
proptest = "1.0"       # Property-based testing
criterion = "0.5"      # Benchmarking