[workspace]
resolver = "2"
members = [
    "crates/achronyme-parser",
    "crates/achronyme-eval",
    "crates/achronyme-types",
    "crates/achronyme-linalg",
    "crates/achronyme-dsp",
    "crates/achronyme-numerical",
    "crates/achronyme-cli",
    "crates/achronyme-solver",
    "crates/achronyme-env",
]
default-members = [
    "crates/achronyme-parser",
    "crates/achronyme-eval",
    "crates/achronyme-types",
    "crates/achronyme-linalg",
    "crates/achronyme-dsp",
    "crates/achronyme-numerical",
    "crates/achronyme-solver",
    "crates/achronyme-env",
]

[workspace.dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Linear algebra
ndarray = { version = "0.15", features = ["blas", "serde"] }
ndarray-linalg = "0.16"
blas-src = { version = "0.8", features = ["openblas"] }
lapack-src = { version = "0.8", features = ["openblas"] }

# DSP
rustfft = "6.0"
num-complex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
proptest = "1.0"       # Property-based testing
criterion = "0.5"      # Benchmarking

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
