[package]
name = "achronyme-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "achronyme"
path = "src/main.rs"

[dependencies]
achronyme-parser = { path = "../achronyme-parser" }
achronyme-eval = { path = "../achronyme-eval" }
achronyme-types = { path = "../achronyme-types" }
rustyline = "14.0"
nu-ansi-term = "0.50"
pest = "2.7"
dirs = "5.0"
