[package]
name = "achronyme-env"
version = "0.6.1"
edition = "2021"
authors = ["Achronyme Contributors"]
description = "Environment persistence and serialization for Achronyme"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
achronyme-types = { path = "../achronyme-types" }

# Serialization
serde = { workspace = true }
rmp-serde = "1.1"        # MessagePack serialization

# Compression
zstd = "0.13"            # Zstandard compression

# Hashing
sha2 = "0.10"            # SHA-256 checksums

# Error handling
thiserror = { workspace = true }

# Utilities
byteorder = "1.5"        # Binary I/O helpers
chrono = "0.4"           # Timestamps

[dev-dependencies]
tempfile = "3.8"         # Temporary files for testing
