[package]
name = "achronyme-eval"
version = "0.6.1"
edition = "2021"

[dependencies]
achronyme-types = { path = "../achronyme-types" }
achronyme-parser = { path = "../achronyme-parser" }
achronyme-dsp = { path = "../achronyme-dsp" }
achronyme-linalg = { path = "../achronyme-linalg" }
achronyme-numerical = { path = "../achronyme-numerical" }
achronyme-solver = { path = "../achronyme-solver" }
achronyme-env = { path = "../achronyme-env" }
