[package]
name = "achronyme-linalg"
version = "0.6.1"
edition = "2021"

[dependencies]
achronyme-types = { path = "../achronyme-types" }
# Migrated to faer for 100% Rust implementation (WASM compatible + high performance)
faer = "0.19"
num-traits = "0.2"
num-complex = "0.4"

[dev-dependencies]
approx = "0.5"
