[package]
name = "achronyme-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Required for WASM

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

# Local dependencies
achronyme-types = { path = "../achronyme-types" }
achronyme-parser = { path = "../achronyme-parser" }
achronyme-eval = { path = "../achronyme-eval" }
achronyme-dsp = { path = "../achronyme-dsp" }
achronyme-linalg = { path = "../achronyme-linalg" }
achronyme-numerical = { path = "../achronyme-numerical" }

# Profile-specific metadata for wasm-pack
[package.metadata.wasm-pack.profile.release]
wasm-opt = false # Disable wasm-opt to avoid bulk memory validation errors
